# selection_and_scaling

./: CMakeLists.txt  MyElement.qml  ScaleDragArea.qml  SelectableArea.qml  SelectableElement.qml  main.qml  qml.qrc  selection_and_scaling.pro
